* add `--theme` option to CLI as shorthand for `-a pdf-theme` (#2250)
* add `--sourcemap` option to CLI to enable `:sourcemap` option on processor (#2265)
* broaden support for relative font sizes in theme to more than just inline elements; document support for relative font sizes
* allow theme to control font properties of marker for ordered list using `olist-marker` category (#2279)

Improvements::

* add internal `Document#attr_unspecified?` method to simplify check for an attribute which as not be set or unset

Bug Fixes::

* always set `imagesdir` attribute to value of `themesdir` when resolving images from theme
* allow `top` keys in `title-page` theme category to accept a fixed value (e.g., `1in`) (#2269)

Compliance::

* configure table borders in way that is compatible with prawn-table > 0.2.2
* don't coerce font size < 1 to relative font size; relative font size should be specified in units

== 2.1.6 (2022-07-19) - @mojavelinux

Bug Fixes::

* resolve font size for monospaced cell when font size value on `codespan` key in theme is relative (#2281)

== 2.1.5 (2022-07-10) - @mojavelinux

Bug Fixes::

* fix position of background color on caption with outside margin (#2271)
* don't allow font scale to compound when entering nested table (#2276)

== 2.1.4 (2022-06-26) - @mojavelinux

Improvements::

* include source location in warning message for truncated table cell if sourcemap is enabled (#2261)

Bug Fixes::

* allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
* apply text-tranform from custom role on phrase after attributes have been resolved (#2263)
* make URL check more strict so image target containing a colon is not mistaken as a URL

== 2.1.3 (2022-06-23) - @mojavelinux

Bug Fixes::

* interpret `start-at` theme keys with value `1` correctly (as `1` instead of `2`) (#2255)
* restore column layout after importing page(s) from PDF (#2253)