@@ -1622,7 +1622,7 @@ module Asciidoctor
             else
               marker = @theme[%(ulist_marker_#{marker_type}_content)] || Bullets[marker_type]
             end
-            [:font_color, :font_family, :font_size, :line_height].each do |prop|
+            [:font_color, :font_family, :font_size, :font_style, :line_height].each do |prop|
               marker_style[prop] = @theme[%(ulist_marker_#{marker_type}_#{prop})] || @theme[%(ulist_marker_#{prop})] || marker_style[prop]
             end if marker
           end
